XWIKI-15268: Page icon not displayed when hovering the page suggestion * Also fixed some whitespace issue on the search suggest (live search) when attachment results were present (because the search suggest source "Attachment Names" is displayed on two rows).

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/suggest/suggest.css
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/suggest/suggest.css
@@ -121,10 +121,9 @@ div.resultContainer div.sourceName {
 .horizontalLayout div.resultContainer div.sourceName {
   float:left;
   width:150px;
-  margin-right:3px;
-  padding-right:20px;
+  padding-right:23px;
   text-align:right;
-  background-position:right center;
+  background-position:right 3px center;
 }
 
 .horizontalLayout div.resultContainer div.xitemcontainer {
